--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,9 @@
-version: '2.4'
+version: '3'
 
 services:
 
   subnet-calculator:
-      image: subnet-calculator
       container_name: subnet-calculator
       build:
         context: .
-      ports:
-        - 9666
-      restart: on-failure
+        dockerfile: Dockerfile
